--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "saas-dashboard",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,35 +13,34 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.5.5",
+    "@clerk/nextjs": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@stripe/stripe-js": "^4.5.0",
-    "@tanstack/react-table": "^8.20.5",
+    "@stripe/stripe-js": "^4.1.0",
+    "@tanstack/react-table": "^8.19.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.33.0",
-    "lucide-react": "^0.441.0",
-    "next": "14.2.12",
+    "drizzle-orm": "^0.32.0",
+    "lucide-react": "^0.407.0",
+    "next": "^14.2.13",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "stripe": "^16.12.0",
-    "tailwind-merge": "^2.5.2",
+    "stripe": "^16.2.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "drizzle-kit": "^0.24.2",
+    "drizzle-kit": "^0.23.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.12",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
